<resources>
    <string name="app_name">QuickCart</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="preferences">Preferences</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="language">Language</string>
    <string name="privacy">Privacy</string>
    <string name="storage">Storage</string>
    <string name="about">About</string>
    <string name="continue_to_checkout">Continue to Checkout</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="email">Email</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="password">Password</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters</string>
    <string name="create_account">Create Account</string>
    <string name="lkr_2_500_00">LKR 2,500.00</string>
    <string name="checkout">Checkout</string>
    <string name="_1">1</string>
    <string name="quantity">Quantity</string>
    <string name="pay_now">Pay Now</string>
    <string name="quickcart_item">QuickCart Item</string>
</resources>